--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~8.2.3",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "firebase": "^7.21.0",
     "lodash.clonedeep": "^4.5.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
